<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/stationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/stationField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/station_name"
        android:inputType="text"
        android:maxLines="1" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/intervalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_interval"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/intervalBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="180" />

    <TextView
        android:id="@+id/intervalView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox
        android:id="@+id/autostartCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autostart" />

    <Button
        android:id="@+id/applyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply" 
        android:onClick="applySettings" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_service"
        android:onClick="startServ" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_service"
        android:onClick="stopServ" />

</LinearLayout>